--- a/README
+++ b/README
@@ -1,39 +1,75 @@
-author: dave kujawski
+# filesieve
 
-this started as a little tool for me to get rid of duplicate media files in a collection of merged media libraries.
-i needed a way to identify duplicate files that had different names and move them into a separate location.
+`filesieve` is a command-line utility for finding duplicate files by content and moving duplicate copies into an alternate directory while leaving one original in place.
 
-## development workflow with uv
+It started as a practical cleanup tool for merged media libraries where files often had different names but identical content.
 
-create and activate a virtual environment:
+## Project overview
 
-```bash
-uv venv
-source .venv/bin/activate
-```
+- Walks one or more base directories recursively.
+- Computes a hash key for each file's content sample.
+- Keeps the first-seen file for each hash.
+- Moves later files with the same hash to a configurable duplicate directory.
 
-sync project dependencies from `pyproject.toml`:
+See [Duplicate detection algorithm](docs/algorithm.md) for implementation details and caveats.
+
+## Supported Python versions
+
+`filesieve` currently supports **Python 3.10+**.
+
+## Installation (with `uv`)
+
+### Install from local source
 
 ```bash
 uv sync
 ```
 
-run the CLI entry point:
+### Install as a tool (console entry point)
 
 ```bash
-uv run filesieve --help
+uv tool install .
 ```
 
-build source and wheel distributions:
+After install, the `filesieve` command is available in your shell.
+
+## CLI usage
+
+General form:
 
 ```bash
-uv build
+filesieve [--alternate DUP_DIR] BASE_DIR [BASE_DIR ...]
 ```
 
-## running tests
+### Examples
 
-run the test suite with:
+Use an explicit duplicate destination:
 
 ```bash
-uv run pytest
+filesieve --alternate /tmp/sieve/dups ~/Music
 ```
+
+Process multiple roots in one run:
+
+```bash
+filesieve --alternate /tmp/sieve/dups ~/Music ~/Videos
+```
+
+Run through `uv` without installing globally:
+
+```bash
+uv run filesieve --alternate /tmp/sieve/dups ./library
+```
+
+For full details, run:
+
+```bash
+filesieve --help
+```
+
+## Additional documentation
+
+- [Duplicate detection algorithm and caveats](docs/algorithm.md)
+- [Development workflow (setup, lint, test, build)](docs/development.md)
+- [Release workflow (versioning + publishing)](docs/release.md)
+- [Migration from legacy script usage](docs/migration.md)
